--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "genesis/behat-sql-extension",
+    "name": "srathbone/behat-sql-extension",
     "type": "behat-extension",
     "description": "SQL/PDO extension that facilitates fixture data creation on the fly for Behat",
     "keywords": ["web", "test", "browser", "gui", "bdd", "behaviour", "testing", "test", "integration", "fixture", "PDO"],
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "~5.5|~7.0",
+        "php": "~5.5||~7.0||~8.0",
         "ext-pdo": "*",
         "behat/behat": "~3.0"
     },
